<resources>
    <string name="app_name">bitmoney-app</string>
    <string name="preferense_file_key">bitmoney_preferences</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="create_account">Create an account</string>
    <string name="i_have_an_account">I have an account already</string>
    <string name="home">Home</string>
    <string name="wallet">Wallet</string>
    <string name="planning">Planning</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="add">ADD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
