<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash"
        tools:context=".ui.auth.register.RegisterFragment">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="@dimen/radius_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_large">

                <EditText
                    android:id="@+id/et_username_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:background="@drawable/box_rounded"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    android:drawablePadding="@dimen/padding_small"
                    android:ems="10"
                    android:hint="@string/username"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:padding="@dimen/padding_small" />

                <EditText
                    android:id="@+id/et_email_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/et_username_register"
                    android:layout_marginBottom="@dimen/radius_small"
                    android:background="@drawable/box_rounded"
                    android:drawableStart="@drawable/ic_email_black_24dp"
                    android:drawablePadding="@dimen/padding_small"
                    android:ems="10"
                    android:hint="@string/email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/padding_small" />

                <EditText
                    android:id="@+id/et_password_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/et_email_register"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:background="@drawable/box_rounded"
                    android:drawableStart="@drawable/ic_lock_black_24dp"
                    android:drawablePadding="@dimen/padding_small"
                    android:ems="10"
                    android:hint="@string/password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:padding="@dimen/padding_small" />

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/et_password_register"
                    android:layout_marginBottom="@dimen/margin_medium"
                    android:background="@drawable/btn_rounded"
                    android:text="@string/register"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tv_have_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btn_register"
                    android:text="@string/i_have_an_account"
                    android:textAlignment="center" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>