<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/colorButton2"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:titleTextColor="@color/white"
            tools:layout_editor_absoluteX="1dp" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:drawableLeft="@drawable/money"
            android:drawablePadding="@dimen/padding_small"
            android:hint="@string/name"
            android:inputType="text"
            android:singleLine="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_nominal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:drawableLeft="@drawable/nama"
            android:drawablePadding="@dimen/padding_small"
            android:hint="Nominal"
            android:inputType="number"
            android:singleLine="false"
            android:text=""
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:drawableLeft="@drawable/tanda"
            android:drawablePadding="@dimen/padding_small"
            android:hint="@string/category"
            android:inputType="text"
            android:singleLine="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

<!--        <EditText-->
<!--            android:id="@+id/et_date"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginLeft="8dp"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:layout_marginRight="8dp"-->
<!--            android:drawableLeft="@drawable/date"-->
<!--            android:drawablePadding="@dimen/padding_small"-->
<!--            android:hint="@string/date"-->
<!--            android:inputType="text"-->
<!--            android:singleLine="false"-->
<!--            android:textColor="@color/colorPrimaryDark"-->
<!--            android:textSize="20sp" />-->

        <Button
            android:id="@+id/btn_add"
            android:layout_width="346dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_rounded"
            android:text="@string/add"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>
</layout>
